reorganized all button types into motivate.css

--- a/challenge-createchallenge.html
+++ b/challenge-createchallenge.html
@@ -45,19 +45,19 @@
                     <span class="text-left">SELECT A CHALLENGE:</span>
                     <br>
                     <br>
-                    <a href="challenge-challengeconfirm.html" class="btn btn-default buttonsize">
+                    <a href="challenge-challengeconfirm.html" class="btn btn-default buttonsize btn-blk">
                         <span class="btn-label">Run 3 Miles</span>
                     </a><br>
-                    <a href="challenge-challengeconfirm.html" class="btn btn-default buttonsize">
+                    <a href="challenge-challengeconfirm.html" class="btn btn-default buttonsize btn-blk">
                         <span class="btn-label">Bench 100 lbs</span>
                     </a><br>
-                    <a href="challenge-challengeconfirm.html" class="btn btn-default buttonsize">
+                    <a href="challenge-challengeconfirm.html" class="btn btn-default buttonsize btn-blk">
                         <span class="btn-label">Go to the gym 4 times a week</span>
                     </a><br>
-                    <a href="challenge-challengeconfirm.html" class="btn btn-default buttonsize">
+                    <a href="challenge-challengeconfirm.html" class="btn btn-default buttonsize btn-blk">
                         <span class="btn-label">Do 100 pushups</span>
                     </a><br>
-                    <a href="challenge-challengeconfirm.html" class="btn btn-default buttonsize">
+                    <a href="challenge-challengeconfirm.html" class="btn btn-default buttonsize btn-blk">
                         <span class="btn-label">Create a new challenge</span>
                     </a><br>
                 <div class="col-md-4"></div>
@@ -66,8 +66,8 @@
         
         <div class ="navbar navbar-default navbar-fixed-bottom">
             <div class="container-fluid">
-                <a href="challenge-friendsearch.html"><button type="button" class="btn btn-lg"> Back </button></a>
-                <a href="challenge-challengeconfirm.html"><button type="button" class="btn btn-lg pull-right"> Next </button></a>
+                <a href="challenge-friendsearch.html"><button type="button" class="btn btn-lg btn-blue"> Back </button></a>
+                <a href="challenge-challengeconfirm.html"><button type="button" class="btn btn-lg pull-right btn-blue"> Next </button></a>
             </div>
         </div>
     </body>
