--- a/challenge-friendsearch.html
+++ b/challenge-friendsearch.html
@@ -51,7 +51,7 @@
         </div>
         <div class ="navbar navbar-default navbar-fixed-bottom">
             <div class="container-fluid">
-                <a href="challenge-createchallenge.html"><button type="button" class="btn btn-lg pull-right"> Next </button></a>
+                <a href="challenge-createchallenge.html"><button type="button" class="btn btn-lg pull-right btn-blue"> Next </button></a>
             </div>
         </div>
     </body>
