--- a/homepage.html
+++ b/homepage.html
@@ -38,16 +38,16 @@
             </div>
             <div class="row">
                 <div class="col-md-4 text-center col-md-offset-4">
-                    <a href = "challenge-friendsearch.html" class = "btn btn-danger buttonsize">
+                    <a href = "challenge-friendsearch.html" class = "btn btn-blk buttonsize">
                         <span class="btn-label">CHALLENGE!</span>
                     </a>
-                    <a href = "acceptdecline.html" class = "btn btn-default buttonsize">
+                    <a href = "acceptdecline.html" class = "btn btn-blk buttonsize">
                         <span class="btn-label">ACCEPT/DECLINE REQUESTS</span>
                     </a>
-                    <a href = "update.html" class = "btn btn-default buttonsize">
+                    <a href = "update.html" class = "btn btn-blk buttonsize">
                         <span class="btn-label">UPDATE PROGRESS</span>
                     </a>
-                    <a href = "stats.html" class = "btn btn-default buttonsize">
+                    <a href = "stats.html" class = "btn btn-blk buttonsize">
                         <span class="btn-label">STATS</span>
                     </a>
                 </div>
