--- a/update.html
+++ b/update.html
@@ -39,7 +39,7 @@
                     <div class="container-fluid" id="update">
                         <div class="btn-group btn-block"> 
                             <a href="progress.html">
-                                <button class="btn btn-large btn-block">
+                                <button class="btn btn-large btn-block btn-blk">
                                     <div class="container-fluid">
                                         <img class="prof-pic pull-left" src="imgs/ted.jpg"></img>
                                         <div id="text"> <br/> &nbsp; vs. Ted Wu <br/></div>
@@ -49,7 +49,7 @@
                                     </div>
                                 </button>
                                 <br/>
-                                <button class="btn btn-large btn-block" id="kevin">
+                                <button class="btn btn-large btn-block btn-blk" id="kevin">
                                     <div class="container-fluid">
                                         <img class="prof-pic pull-left" src="imgs/kevin.jpg"></img>
                                         <div id="text"> <br/> &nbsp; vs. Kevin Chen <br/></div>
@@ -59,7 +59,7 @@
                                     </div>
                                 </button>
                                 <br/>
-                                <button class="btn btn-large btn-block">
+                                <button class="btn btn-large btn-block btn-blk">
                                     <div class="container-fluid">
                                         <img class="prof-pic pull-left" src="imgs/brittany.jpg"></img>
                                         <div id="text"> <br/> &nbsp; vs. Brittany Lee <br/></div>
@@ -69,7 +69,7 @@
                                     </div>
                                 </button>
                                 <br/>
-                                <button class="btn btn-large btn-block">
+                                <button class="btn btn-large btn-block btn-blk">
                                     <div class="container-fluid">
                                         <img class="prof-pic pull-left" src="imgs/eric.jpg"></img>
                                         <div id="text"> <br/> &nbsp; vs. Eric Tu <br/></div>
