--- a/acceptdecline.html
+++ b/acceptdecline.html
@@ -17,6 +17,7 @@
         <!-- JS/JQuery-->
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.js"></script>
+        <script type="text/javascript" src="js/motivate.js"></script>
     </head>
 
     <body>
@@ -46,10 +47,10 @@
                                 <br/>
                                     </p>
                             <div class="btn-group pull-right">
-                              <button type="button" class="btn btn-danger">
+                              <button type="button" class="btn btn-blk">
                                 Accept
                               </button></br></br>
-                              <button type="button" class="btn btn-default">
+                              <button type="button" class="btn btn-blk">
                                 Decline
                               </button>
                             </div>
@@ -60,10 +61,10 @@
                                 <br/>
                                     </p>
                             <div class="btn-group pull-right">
-                              <button type="button" class="btn btn-danger">
+                              <button type="button" class="btn btn-blk">
                                 Accept
                               </button></br></br>
-                              <button type="button" class="btn btn-default">
+                              <button type="button" class="btn btn-blk">
                                 Decline
                               </button>
                             </div>
@@ -74,10 +75,10 @@
                                 <br/>
                                     </p>
                             <div class="btn-group pull-right">
-                              <button type="button" class="btn btn-danger">
+                              <button type="button" class="btn btn-blk">
                                 Accept
                               </button></br></br>
-                              <button type="button" class="btn btn-default">
+                              <button type="button" class="btn btn-blk">
                                 Decline
                               </button>
                             </div>
@@ -85,12 +86,10 @@
                         </ul>
                     </div>
 
-        <div class ="navbar navbar-default navbar-fixed-bottom">
-
-
+        <div class ="navbar navbar-default navbar-static-bottom">
             <div class="container-fluid">
-                <button type="button" class="btn btn-success btn-lg pull-right"> Submit </button> 
-                <button type="button" class="btn btn-warning btn-lg pull-right" id="revert"> Revert </button>
+                <button type="button" class="btn btn-blue btn-lg pull-right"> Submit </button> 
+                <button type="button" class="btn btn-blue btn-lg pull-right" id="revert"> Revert </button>
             </div>
         </div>
     </body>
