--- a/progress.html
+++ b/progress.html
@@ -172,9 +172,9 @@
 
         <nav class="navbar nav-default navbar-fixed-bottom" id="bottom-nav" role="navigation">
             <div class="container-fluid">
-                <a href="update.html"> <button type="button" class="btn btn-danger btn-lg"> Back </button> </a>
-                <button type="button" class="btn btn-success btn-lg pull-right"> Submit </button>
-                <button type="button" class="btn btn-warning btn-lg pull-right" id="revert"> Revert </button>
+                <a href="update.html"> <button type="button" class="btn btn-blue btn-lg"> Back </button> </a>
+                <button type="button" class="btn btn-blue btn-lg pull-right"> Submit </button>
+                <button type="button" class="btn btn-blue btn-lg pull-right" id="revert"> Revert </button>
             </div>
         </nav>
         
