--- a/settings.html
+++ b/settings.html
@@ -35,7 +35,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4 text-center col-md-offset-4">
-                    <a href = "index.html" class = "btn btn-default" id = "buttonsize">Logout</a><br><br>
+                    <a href = "login.html" class = "btn btn-blk" id="white-text">Logout</a><br><br>
                 </div>
             </div>
         </div>
