fixed login page css

--- a/login.html
+++ b/login.html
@@ -12,13 +12,11 @@
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
         <link rel="stylesheet" type="text/css" href="css/motivate.css">
-        <link rel="stylesheet" type="text/css" href="css/index.css">
+        <link rel="stylesheet" type="text/css" href="css/login.css">
 
         <!-- JS/JQuery-->
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.js"></script>
-
-        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine|Inconsolata|Droid+Sans|Montserrat Subrayada|Lily Script One|Chela One|Krona One">
     </head>
 
     <body>
@@ -35,8 +33,8 @@
                             <div class="row"><input type="text" placeholder="Username"></div>
                             <div class="row"><input type="password" placeholder="Password"></div>
                         </form>
-                        <a href="homepage.html"><button id = "login" class = "btn btn-primary btn-lg"  class="btn btn-success" type="submit">Log In</button></a>
-                        <button  id = "signup"class = "btn btn-primary btn-lg"  class="btn btn-success" type="submit">Sign Up</button>
+                        <a href="homepage.html"><button id = "login" class = "btn btn-blue btn-lg"  class="btn btn-success" type="submit">Log In</button></a>
+                        <button  id = "signup"class = "btn btn-blue btn-lg"  class="btn btn-success" type="submit">Sign Up</button>
                     </div>
                 </div>
             </div>
