enabled toggle on adc

--- a/acceptdecline.html
+++ b/acceptdecline.html
@@ -17,7 +17,7 @@
         <!-- JS/JQuery-->
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.js"></script>
-        <script type="text/javascript" src="js/motivate.js"></script>
+        <script type="text/javascript" src="js/adc.js"></script>
     </head>
 
     <body>
@@ -47,10 +47,10 @@
                                 <br/>
                                     </p>
                             <div class="btn-group pull-right">
-                              <button type="button" class="btn btn-blk">
+                              <button type="button" class="btn btn-blk" value=1>
                                 Accept
                               </button></br></br>
-                              <button type="button" class="btn btn-blk">
+                              <button type="button" class="btn btn-blk" >
                                 Decline
                               </button>
                             </div>
@@ -88,7 +88,7 @@
 
         <div class ="navbar navbar-default navbar-static-bottom">
             <div class="container-fluid">
-                <button type="button" class="btn btn-blue btn-lg pull-right"> Submit </button> 
+                <a href="homepage.html"> <button type="button" class="btn btn-blue btn-lg pull-right"> Submit </button> </a>
                 <button type="button" class="btn btn-blue btn-lg pull-right" id="revert"> Revert </button>
             </div>
         </div>
