--- a/progress.html
+++ b/progress.html
@@ -173,7 +173,7 @@
         <nav class="navbar nav-default navbar-fixed-bottom" id="bottom-nav" role="navigation">
             <div class="container-fluid">
                 <a href="update.html"> <button type="button" class="btn btn-blue btn-lg"> Back </button> </a>
-                <button type="button" class="btn btn-blue btn-lg pull-right"> Submit </button>
+                <a href="homepage.html"> <button type="button" class="btn btn-blue btn-lg pull-right"> Submit </button> </a>
                 <button type="button" class="btn btn-blue btn-lg pull-right" id="revert"> Revert </button>
             </div>
         </nav>
