--- a/update.html
+++ b/update.html
@@ -33,8 +33,11 @@
 
         <div class="container-fluid">
             <div class="row">
+                <div class="col-md-4 text-center col-md-offset-4">
+                    <img class="logo" src="imgs/logofinals.jpg">
+            </div>
+            <div class="row">
                 <div class="col-md-4 col-md-offset-4">
-                    <h1 class="text-center"> #MOTIVATE </h1>
                     <h2 class="text-center"> Choose a user to update challenges for:</h2> 
                     <div class="container-fluid" id="update">
                         <div class="btn-group btn-block"> 
