--- a/settings.html
+++ b/settings.html
@@ -31,11 +31,13 @@
         </nav>
         <div class="container-fluid">
             <div class="row">
-                <h1 class="text-center"> #MOTIVATE </h1>
+                <div class="col-md-4 text-center col-md-offset-4">
+                    <img class="logo" src="imgs/logofinals.jpg">
             </div>
             <div class="row">
                 <div class="col-md-4 text-center col-md-offset-4">
-                    <a href = "login.html" class = "btn btn-blk" id="white-text">Logout</a><br><br>
+                    <br>
+                    <a href = "login.html" class = "btn btn-blk btn-lg" id="white-text">Logout</a><br><br>
                 </div>
             </div>
         </div>
