added logo to acceptdecline

--- a/acceptdecline.html
+++ b/acceptdecline.html
@@ -35,11 +35,10 @@
 
         <div class="container">
             <div class="row">
-                <h1 class="text-center"> #MOTIVATE </h1>
+                <div class="col-md-4 text-center col-md-offset-4">
+                    <img class="logo" src="imgs/logofinals.jpg">
+                    <span class="text-left"> Accept/Decline Challenges:</span> </br>
             </div>
-            <div class="row">
-                <h2 class="text-center"> Accept/Decline Challenges: </h2> </br>
-            </div>    
             <ul class="list-group">
                           <p><li class="list-group-item" id="adc-item">
                             <p style="display:inline-block">
