made button fixes to progress.html

--- a/progress.html
+++ b/progress.html
@@ -48,7 +48,7 @@
                             <li class="list-group-item">
                                 Run 3 miles
                                 <div class="btn-group pull-right">
-                                    <button type="button" class="btn btn-xs btn-primary dropdown-toggle" data-toggle="dropdown">
+                                    <button type="button" class="btn btn-xs btn-blk dropdown-toggle" data-toggle="dropdown">
                                         Update <span class="caret"></span>
                                     </button>
                                     <ul class="dropdown-menu" role="menu">
@@ -76,7 +76,7 @@
                             <li class="list-group-item">
                                 Bench 100 lbs
                                 <div class="btn-group pull-right">
-                                    <button type="button" class="btn btn-xs btn-primary dropdown-toggle" data-toggle="dropdown">
+                                    <button type="button" class="btn btn-xs btn-blk dropdown-toggle" data-toggle="dropdown">
                                         Update <span class="caret"></span>
                                     </button>
                                     <ul class="dropdown-menu" role="menu">
@@ -90,7 +90,7 @@
                             <li class="list-group-item">
                                 Workout 4x a week
                                 <div class="btn-group pull-right">
-                                    <button type="button" class="btn btn-xs btn-primary dropdown-toggle" data-toggle="dropdown">
+                                    <button type="button" class="btn btn-xs btn-blk dropdown-toggle" data-toggle="dropdown">
                                         Update <span class="caret"></span>
                                     </button>
                                     <ul class="dropdown-menu" role="menu">
@@ -124,7 +124,7 @@
                             <li class="list-group-item">
                                 Do 50 pushups 
                                 <div class="btn-group pull-right">
-                                <button type="button" class="btn btn-xs btn-primary dropdown-toggle" data-toggle="dropdown">
+                                <button type="button" class="btn btn-xs btn-blk dropdown-toggle" data-toggle="dropdown">
                                     Update <span class="caret"></span>
                                 </button>
                                 <ul class="dropdown-menu" role="menu">
