--- a/challenge-createchallenge.html
+++ b/challenge-createchallenge.html
@@ -64,7 +64,7 @@
             </div>
         </div>
         
-        <div class ="navbar navbar-default navbar-fixed-bottom pull-down">
+        <div class ="navbar navbar-default navbar-static-bottom pull-down">
             <div class="container-fluid">
                 <a href="challenge-friendsearch.html"><button type="button" class="btn btn-lg btn-blue"> Back </button></a>
                 <a href="challenge-challengeconfirm.html"><button type="button" class="btn btn-lg pull-right btn-blue"> Next </button></a>
