--- a/challenge-friendsearch.html
+++ b/challenge-friendsearch.html
@@ -49,7 +49,7 @@
                 </dvi>
             </div>
         </div>
-        <div class ="navbar navbar-default navbar-fixed-bottom">
+        <div class ="navbar navbar-default navbar-static-bottom">
             <div class="container-fluid">
                 <a href="challenge-createchallenge.html"><button type="button" class="btn btn-lg pull-right btn-blue"> Next </button></a>
             </div>
