--- a/progress.html
+++ b/progress.html
@@ -171,7 +171,7 @@
                 </div>
         </div>  
 
-        <nav class="navbar nav-default navbar-fixed-bottom" id="bottom-nav" role="navigation">
+        <nav class="navbar nav-default navbar-static-bottom" id="bottom-nav" role="navigation">
             <div class="container-fluid">
                 <a href="update.html"> <button type="button" class="btn btn-blue btn-lg"> Back </button> </a>
                 <a href="homepage.html"> <button type="button" class="btn btn-blue btn-lg pull-right"> Submit </button> </a>
