added button color toggle to challenge-creation page

--- a/challenge-createchallenge.html
+++ b/challenge-createchallenge.html
@@ -45,21 +45,16 @@
                     <span class="text-left">SELECT A CHALLENGE:</span>
                     <br>
                     <br>
-                    <a href="challenge-challengeconfirm.html" class="btn btn-default buttonsize btn-blk">
-                        <span class="btn-label">Run 3 Miles</span>
-                    </a><br>
-                    <a href="challenge-challengeconfirm.html" class="btn btn-default buttonsize btn-blk">
-                        <span class="btn-label">Bench 100 lbs</span>
-                    </a><br>
-                    <a href="challenge-challengeconfirm.html" class="btn btn-default buttonsize btn-blk">
-                        <span class="btn-label">Go to the gym 4 times a week</span>
-                    </a><br>
-                    <a href="challenge-challengeconfirm.html" class="btn btn-default buttonsize btn-blk">
-                        <span class="btn-label">Do 100 pushups</span>
-                    </a><br>
-                    <a href="challenge-challengeconfirm.html" class="btn btn-default buttonsize btn-blk">
-                        <span class="btn-label">Create a new challenge</span>
-                    </a><br>
+                    <span class="btn-label btn btn-default buttonsize btn-blk">Run 3 Miles</span>
+                    <br>
+                    <span class="btn-label btn btn-default buttonsize btn-blk">Bench 100 lbs</span>
+                    <br>
+                    <span class="btn-label btn btn-default buttonsize btn-blk">Go to the gym 4 times a week</span>
+                    <br>
+                    <span class="btn-label btn btn-default buttonsize btn-blk">Do 100 pushups</span>
+                    <br>
+                    <span class="btn-label btn btn-default buttonsize btn-blk">Create a new challenge</span>
+                    <br>
                 <div class="col-md-4"></div>
             </div>
         </div>
