fixed up headers on adc page

--- a/acceptdecline.html
+++ b/acceptdecline.html
@@ -38,52 +38,60 @@
                 <div class="col-md-4 text-center col-md-offset-4">
                     <img class="logo" src="imgs/logofinals.jpg">
                     <span class="text-left"> Accept/Decline Challenges:</span> </br>
+                </div>
             </div>
-            <ul class="list-group">
-                          <p><li class="list-group-item" id="adc-item">
-                            <p style="display:inline-block">
-                                    <b>Ted Wu</b> challenges you to: Bench 100 pounds
-                                <br/>
-                                    </p>
-                            <div class="btn-group pull-right">
-                              <button type="button" class="btn btn-blk" value=1>
+            <div class="row">
+                <ul class="list-group">
+                    <li class="list-group-item" id="adc-item">
+                        <p style="display:inline-block">
+                            <b>Ted Wu</b> challenges you to:
+                            <br/> Bench 100 pounds
+                        </p>
+                        <div class="btn-group pull-right">
+                            <br/>
+                            <button type="button" class="btn btn-blk" value=1>
                                 Accept
-                              </button></br></br>
-                              <button type="button" class="btn btn-blk" >
+                            </button></br></br>
+                            <button type="button" class="btn btn-blk" >
                                 Decline
-                              </button>
-                            </div>
-                          </li></p>
-                          <p><li class="list-group-item" id="adc-item">
-                            <p style="display:inline-block">
-                                    <b>Elaine Chang</b> challenges you to: Run 3 miles
-                                <br/>
-                                    </p>
-                            <div class="btn-group pull-right">
-                              <button type="button" class="btn btn-blk">
+                            </button>
+                        </div>
+                    </li>
+                    <br/>
+                    <li class="list-group-item" id="adc-item">
+                        <p style="display:inline-block">
+                            <b>Elaine Chang</b> challenges you to:
+                            <br/> Run 3 miles
+                        </p>
+                        <div class="btn-group pull-right">
+                            <br/>
+                            <button type="button" class="btn btn-blk">
                                 Accept
-                              </button></br></br>
-                              <button type="button" class="btn btn-blk">
+                            </button></br></br>
+                            <button type="button" class="btn btn-blk">
                                 Decline
-                              </button>
-                            </div>
-                          </li></p>
-                          <p><li class="list-group-item" id="adc-item">
-                            <p style="display:inline-block">
-                                    <b>Kevin Chen</b> challenges you to: Go to the gym 4 times a week
-                                <br/>
-                                    </p>
-                            <div class="btn-group pull-right">
-                              <button type="button" class="btn btn-blk">
+                            </button>
+                        </div>
+                    </li>
+                    <br/>
+                    <li class="list-group-item" id="adc-item">
+                        <p style="display:inline-block">
+                            <b>Kevin Chen</b> challenges you to:
+                            <br/> Go to the gym 4 times a week
+                        </p>
+                        <div class="btn-group pull-right">
+                            <br/>
+                            <button type="button" class="btn btn-blk">
                                 Accept
-                              </button></br></br>
-                              <button type="button" class="btn btn-blk">
+                            </button></br></br>
+                            <button type="button" class="btn btn-blk">
                                 Decline
-                              </button>
-                            </div>
-                          </li></p>
-                        </ul>
-                    </div>
+                            </button>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
         <div class ="navbar navbar-default navbar-static-bottom">
             <div class="container-fluid">
