--- a/acceptdecline.html
+++ b/acceptdecline.html
@@ -33,7 +33,7 @@
         </nav>
 
 
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-md-4 text-center col-md-offset-4">
                     <img class="logo" src="imgs/logofinals.jpg">
