--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="col-xs-12">
                 <div class="thumbnail">
                     <div class="caption">
-                        <h3> <span class="glyphicon glyphicon-fire pull-left icons"></span>Challenge your friends</h3>
+                        <h3> <span class="glyphicon glyphicon-fire pull-left icons" style="color: #D8403A"></span>Challenge your friends</h3>
                         <p class = "textbox"><center><img src="imgs/screenshot.png" style="max-width:75%"></center></p>
                     </div>
                 </div>
@@ -57,7 +57,7 @@
             <div class="col-xs-12">
                 <div class="thumbnail">
                     <div class="caption">
-                        <h3><span class="glyphicon glyphicon-ok pull-left icons"></span>Track your progress</h3>
+                        <h3><span class="glyphicon glyphicon-ok pull-left icons" style="color: #59D840"></span>Track your progress</h3>
                         <p class = "textbox"><center><img src="imgs/screenshot.png" style="max-width:75%"></center></p>
                     </div>
                 </div>
