accedance color commit

--- a/homepage.html
+++ b/homepage.html
@@ -35,10 +35,7 @@
             <div class="row">
                 <div class="col-md-4 text-center col-md-offset-4">
                     <img class="logo" src="imgs/logofinals.jpg">
-            </div>
-            <div class="row">
-                <div class="col-md-4 text-center col-md-offset-4">
-                    <a href = "challenge-friendsearch.html" class = "btn btn-blk buttonsize">
+                    <a href = "challenge-friendsearch.html" class = "btn btn-blk buttonsize" id="challenge-btn">
                         <span class="btn-label">CHALLENGE!</span>
                     </a>
                     <a href = "acceptdecline.html" class = "btn btn-blk buttonsize">
