--- a/acceptdecline.html
+++ b/acceptdecline.html
@@ -40,7 +40,7 @@
                     <span class="text-left"> Accept/Decline Challenges:</span> </br>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" id="row2">
                 <ul class="list-group">
                     <li class="list-group-item" id="adc-item">
                         <p style="display:inline-block">
@@ -49,10 +49,10 @@
                         </p>
                         <div class="btn-group pull-right">
                             <br/>
-                            <button type="button" class="btn btn-blk" value=1>
+                            <button type="button" class="btn btn-blk btn-ad" value="00">
                                 Accept
                             </button></br></br>
-                            <button type="button" class="btn btn-blk" >
+                            <button type="button" class="btn btn-blk btn-ad" value="01">
                                 Decline
                             </button>
                         </div>
@@ -65,10 +65,10 @@
                         </p>
                         <div class="btn-group pull-right">
                             <br/>
-                            <button type="button" class="btn btn-blk">
+                            <button type="button" class="btn btn-blk btn-ad" value="10">
                                 Accept
                             </button></br></br>
-                            <button type="button" class="btn btn-blk">
+                            <button type="button" class="btn btn-blk btn-ad" value="11">
                                 Decline
                             </button>
                         </div>
@@ -81,10 +81,10 @@
                         </p>
                         <div class="btn-group pull-right">
                             <br/>
-                            <button type="button" class="btn btn-blk">
+                            <button type="button" class="btn btn-blk btn-ad" value="20">
                                 Accept
                             </button></br></br>
-                            <button type="button" class="btn btn-blk">
+                            <button type="button" class="btn btn-blk btn-ad" value="21">
                                 Decline
                             </button>
                         </div>
@@ -95,7 +95,7 @@
 
         <div class ="navbar navbar-default navbar-static-bottom">
             <div class="container-fluid">
-                <a href="homepage.html"> <button type="button" class="btn btn-blue btn-lg pull-right"> Submit </button> </a>
+                <button type="button" class="btn btn-blue btn-lg pull-right" id="submit"> Submit </button>
                 <button type="button" class="btn btn-blue btn-lg pull-right" id="revert"> Revert </button>
             </div>
         </div>
