--- a/update.html
+++ b/update.html
@@ -34,7 +34,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-4 text-center col-md-offset-4">
-                    <img class="logo" src="imgs/logofinals.jpg">
+                    <a href="homepage.html"> <img class="logo" src="imgs/logofinals.jpg"> </a>
             </div>
             <div class="row">
                 <div class="col-md-4 col-md-offset-4">
