--- a/acceptdecline.html
+++ b/acceptdecline.html
@@ -49,10 +49,10 @@
                         </p>
                         <div class="btn-group pull-right">
                             <br/>
-                            <button type="button" class="btn btn-blk">
+                            <button type="button" class="btn btn-blk" value="00">
                                 Accept
                             </button></br></br>
-                            <button type="button" class="btn btn-blk btn-ad">
+                            <button type="button" class="btn btn-blk btn-ad" value="01">
                                 Decline
                             </button>
                         </div>
