--- a/acceptdecline.html
+++ b/acceptdecline.html
@@ -49,7 +49,7 @@
                         </p>
                         <div class="btn-group pull-right">
                             <br/>
-                            <button type="button" class="btn btn-blk" value="00">
+                            <button type="button" class="btn-ad btn btn-blk" value="00">
                                 Accept
                             </button></br></br>
                             <button type="button" class="btn btn-blk btn-ad" value="01">
