--- a/acceptdecline.html
+++ b/acceptdecline.html
@@ -17,6 +17,7 @@
         <!-- JS/JQuery-->
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.js"></script>
+        <script type="text/javascript" src="js/adc.js"></script>
 
     </head>
 
@@ -49,10 +50,10 @@
                         </p>
                         <div class="btn-group pull-right">
                             <br/>
-                            <button type="button" class="btn-ad btn btn-blk" value="00">
+                            <button type="button" class="btn btn-blk" value="00">
                                 Accept
                             </button></br></br>
-                            <button type="button" class="btn btn-blk btn-ad" value="01">
+                            <button type="button" class="btn btn-blk" value="01">
                                 Decline
                             </button>
                         </div>
@@ -65,10 +66,10 @@
                         </p>
                         <div class="btn-group pull-right">
                             <br/>
-                            <button type="button" class="btn btn-blk btn-ad" value="10">
+                            <button type="button" class="btn btn-blk" value="10">
                                 Accept
                             </button></br></br>
-                            <button type="button" class="btn btn-blk btn-ad" value="11">
+                            <button type="button" class="btn btn-blk" value="11">
                                 Decline
                             </button>
                         </div>
@@ -81,10 +82,10 @@
                         </p>
                         <div class="btn-group pull-right">
                             <br/>
-                            <button type="button" class="btn btn-blk btn-ad" value="20">
+                            <button type="button" class="btn btn-blk" value="20">
                                 Accept
                             </button></br></br>
-                            <button type="button" class="btn btn-blk btn-ad" value="21">
+                            <button type="button" class="btn btn-blk" value="21">
                                 Decline
                             </button>
                         </div>
