adding pictures and names

--- a/acceptdecline.html
+++ b/acceptdecline.html
@@ -45,11 +45,12 @@
                 <ul class="list-group">
                     <li class="list-group-item" id="adc-item">
                         <p style="display:inline-block">
+                            <img src="imgs/ted.jpg" class="img-rounded prof-pic"></br>
                             <b>Ted Wu</b> challenges you to:
                             <br/> Bench 100 pounds
                         </p>
                         <div class="btn-group pull-right">
-                            <br/>
+                            <br/><br/>
                             <button type="button" class="btn btn-blk" value="00">
                                 Accept
                             </button></br></br>
@@ -61,11 +62,12 @@
                     <br/>
                     <li class="list-group-item" id="adc-item">
                         <p style="display:inline-block">
+                            <img src="imgs/elaine.jpg" class="img-rounded prof-pic"></br>
                             <b>Elaine Chang</b> challenges you to:
                             <br/> Run 3 miles
                         </p>
                         <div class="btn-group pull-right">
-                            <br/>
+                            <br/><br/>
                             <button type="button" class="btn btn-blk" value="10">
                                 Accept
                             </button></br></br>
@@ -77,11 +79,12 @@
                     <br/>
                     <li class="list-group-item" id="adc-item">
                         <p style="display:inline-block">
+                            <img src="imgs/kevin.jpg" class="img-rounded prof-pic"></br>
                             <b>Kevin Chen</b> challenges you to:
                             <br/> Go to the gym 4 times a week
                         </p>
                         <div class="btn-group pull-right">
-                            <br/>
+                            <br/><br/>
                             <button type="button" class="btn btn-blk" value="20">
                                 Accept
                             </button></br></br>
