--- a/stats.html
+++ b/stats.html
@@ -38,11 +38,11 @@
             
             <div class = "col-md-4 col-md-offset-4">
                 <div class="thumbnail" id="user-stats">
-                    <img src="imgs/ted.jpg" alt="user photo" class="img-rounded prof-pic" id="userpic">
-                        <div class="caption">
-                            <p class ="text-center stats-text">Wins: 43</p>
-                            <p class="text-center stats-text">Losses: 20</p>
-                        </div>
+                    <div class="container-fluid">
+                        <img class="img-rounded prof-pic pull-left" src="imgs/ted.jpg" ></img>
+                        <div><center><br/><b>Overall</b></br>Wins: 43<br/>Losses: 20</center></div>                                      
+                    </div>   
+                        
                 </div>
             </div>
 
@@ -52,25 +52,25 @@
                         <th>Opponent</th>
                         <th>Wins</th>
                         <th>Losses</th>
-                        <th>H 2 H</th>
+                        <th>Head2Head</th>
                       </tr>
 
                       <tr>
-                        <td><img src="imgs/brittany.jpg" alt="user photo" class="img-rounded prof-pic"></td>
+                        <td><center><img src="imgs/brittany.jpg" alt="user photo" class="img-rounded prof-pic" style="width:75px;height:75px"></br>Brittany Lee</center></td>
                         <td>24</td>
                         <td>12</td>
                         <td>6-7</td>
                       </tr>
 
                       <tr>
-                        <td><img src="imgs/kevin.jpg" alt="user photo" class="img-rounded prof-pic"></td>
+                        <td><center><img src="imgs/kevin.jpg" alt="user photo" class="img-rounded prof-pic" style="width:75px;height:75px"></br>Kevin Chen</center></td>
                         <td>20</td>
                         <td>20</td>
                         <td>10-1</td>
                       </tr>
 
                       <tr>
-                        <td><img src="imgs/eric.jpg" alt="user photo" class="img-rounded prof-pic"></td>
+                        <td><center><img src="imgs/eric.jpg" alt="user photo" class="img-rounded prof-pic" style="width:75px;height:75px"></br>Eric Tu</center></td>
                         <td>10</td>
                         <td>5</td>
                         <td>2-2</td>
